# endstone-inventoryui-api

./: .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md
.github/workflows/: nightly.yml  workflow.yml
examples/cpp/: CMakeLists.txt  plugin.cpp
include/: bedrock_ffi.h  bedrock_nbt.h  bedrock_stream.h  form_tracker.h  inventory.h  inventoryui_init.h  item_registry.h  listener.h  menu.h  menu_type.h  packets.h  plugin.h  service.h  utils.h  version.h.in
include/endstone_inventoryui/: inventoryui.h
src/: inventory.cpp  inventoryui_init.cpp  item_registry.cpp  listener.cpp  menu.cpp  packets.cpp  plugin.cpp
